specs/blueprints/errors/validation/expected_section_got_empty.eno
# Expecting a section but getting an ambiguous element

-- input
element:
-- input

-- javascript
parse(input).section('element');
-- javascript

-- php
Enolib\Parser::parse($input)->section('element');
-- php

-- python
enolib.parse(input).section('element')
-- python

-- ruby
Enolib.parse(input).section('element')
-- ruby

## ValidationError

-- text
A section with the key 'element' was expected.
-- text

-- snippet
   Line | Content
 >    1 | element:
-- snippet

selection: [0,0] => [0,8]
